--- a/README
+++ b/README
@@ -19,13 +19,13 @@ A variavel disk_path pode ser alterada em ytdown.py para quaisquer dispositivo (
 
 Baixar somente video: 
 
-python2.7 os2.py --video --link _LINK_ 
-python2.7 os2.py --video -p --link _LINK_ ( p=Send to disk_path )
+python2.7 ytconsole.py --video --link _LINK_ 
+python2.7 ytconsole.py --video -p --link _LINK_ ( p=Send to disk_path )
 
 Baixar e extrair audio:
 
-python2.7 --audio --link _LINK_
-python2.7 --audio -p --link _LINK_ ( p= Send to disk_path )
+python2.7 ytconsole.py --audio --link _LINK_
+python2.7 ytconsole.py --audio -p --link _LINK_ ( p= Send to disk_path )
 
 
 
